<resources>
    <string name="app_name">LiveAndHealth</string>
    <string name="link_app">http://play.google.com/store/apps/details?id=ru.pankratov.jewelercalculator</string>
    <string name="main_focus_text">состояния</string>
    <string name="main_breath_text">дыхание</string>
    <string name="main_meditation_text">медитации</string>
    <string name="main_settings_text">настройки</string>
    <string name="conditions_text">ФОКУСЫ СОСТОЯНИЙ</string>
    <string name="breaths_text">ДЫХАНИЕ</string>
    <string name="meditations_text">МЕДИТАЦИИ</string>
    <string name="start_text">START</string>
    <string name="settings_text">Настройки</string>
    <string name="review_text">Поделиться</string>
    <string name="share_text">Оставить отзыв</string>
    <string name="send_mail_text">Сообщить о проблеме</string>
    <string name="about_text">О приложении</string>
    <string name="premium_text">PREMIUM</string>
    <string name="about_discription_text">
        Здесь будет длинный текст описания приложения
        Здесь будет длинный текст описания приложения
        Здесь будет длинный текст описания приложения\n\n
        Фокусы состояний\n
        Здесь будет длинный текст описания приложения
        Здесь будет длинный текст описания приложения
        Здесь будет длинный текст описания приложения\n\n
        Дыхание\n
        Здесь будет длинный текст описания приложения
        Здесь будет длинный текст описания приложения
        Здесь будет длинный текст описания приложения\n\n
        Медитации\n
        Здесь будет длинный текст описания приложения
        Здесь будет длинный текст описания приложения
        Здесь будет длинный текст описания приложения
    </string>
    <string name="start_dialog_meditation_head_text">ПОДГОТОВЬТЕСЬ</string>
    <string name="start_dialog_meditation_discription_text">
        Подключите гарнитуру\n\n
        Настройте громкость\n\n
        Сядьте или лягте удобно\n\n
        Расслабьтесь</string>
    <string-array name="array_date_premium">
        <item>12 месяцев</item>
        <item>6 месяцев</item>
        <item>1 месяц</item>
    </string-array>
    <string-array name="array_price_premium">
        <item>1590p</item>
        <item>990p</item>
        <item>199p</item>
    </string-array>
    <string-array name="array_price_premium_old">
        <item>3850p</item>
        <item>1640p</item>
        <item>480p</item>
    </string-array>
    <string-array name="array_discount_premium">
        <item>скидка -40%</item>
        <item>скидка -30%</item>
        <item>скидка -20%</item>
    </string-array>
    <string-array name="array_discription_premium">
        <item>16р. в неделю</item>
        <item>28р. в неделю</item>
        <item>39р. в неделю</item>
    </string-array>
    <string name="title_activity_eyes">EyesActivity</string>
    <string name="title_activity_breath">BreathActivity</string>
    <string name="title_activity_meditation">MeditationActivity</string>
    <string name="loading">Загрузка\.\.\.\</string>
    <string name="file_not_found">Нет подключения</string>
    <string name="bw">Назад</string>
    <string name="pause">Пауза</string>
    <string name="play">Играть</string>
    <string name="fw">Вперед</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="text_chtotoposhlonetak">Что-то пошло не так</string>
    <string-array name="list_focus_exercise_array">
        <item>ОГОНЬ</item>
        <item>ВОДА</item>
        <item>ЗЕМЛЯ</item>
        <item>ВОЗДУХ</item>
    </string-array>
    <string-array name="list_focus_description_array">
        <item>Имидж Искусство Благотворительность</item>
        <item>Семья Секс Духовность</item>
        <item>Финансы Работа Здоровье</item>
        <item>Знания Любовь Дружба</item>
    </string-array>
    <string-array name="list_focus_description_full_array">
        <item>Имидж, Искусство, Благотворительность.\n\n
            Огонь - это каузальный уровень восприятия. Уровень этики, ценностей, идеалов, красоты и гармонии.
            Уровень архитипов и коллективного разума.
            Имея "огненный" имидж вы будете обладать харизмой, нравиться подавляющему большенству людей,
            к вам будут тянуться.
            Заниматься искусством или творчеством - значит "жечь сердца людей" словом или образом.
            Зажигать эмоции, распалять воображение. Находясь в огненном состоянии вы сможете создавать шедевры.\n\n
            Символ благотворительности - свеча. Только в состоянии горения вы можете обогреть других.
            Гори, но не сгорай - вот девиз людей, которые истинно служат миру и людям.\n\n
            Как работать с тренажером:\n
            Включите тренажер и глядя на огонь постарайтесь почувствовать горение, но не в теле, а в
            мышлении, на уровне идей, жар собственных мыслей.
            Представьте собственное свечение, сияние и слейтесь с образом огня на уровне помыслов и идей.
        </item>
        <item>Знания, Любовь, Дружба.\n\n
            Воздух - это ментальный уровень. Уровень мыслей, лошки, вычислений, фантазий, мечтаний,
            планов и мыслеформ.\n\n
            Не зря про мечтательных людей говорят: "Они парят в облаках".\n\n
            Мы сами похожи на воздух - стремительны, невесомы, незримы, но они есть всегда.\n\n
            Состояние, в котором вы добьетесь успеха в любви, знаниях и бружбе - это парение.\n\n
            Вы должны чувствовать полет мыслей, свободу мышления и воображения, чувствовать силу
            собственного разума, прибывать в состоянии игры и свободы, тогда вы будете легко
            любить и вызывать любовь к себе.\n\n
            Как работать с тренажером:\n
            Включите тренажер и глядя на экран постарайтесь почувствовать полет,
            смотрите на поток воздуха и представьте как вы летите вместе с ним,
            как увлекаете за собой, за своими идеями других. Играйте в своем
            воображении с этим потоком.
        </item>
        <item>Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание</item>
        <item>Описание Описание Описание Описание Описание Описание Описание Описание Описание Описание</item>
    </string-array>
    <string-array name="list_breath_exercise_array">
        <item>Ясный ум</item>
        <item>Расслабление</item>
        <item>Успокоение</item>
        <item>Сила</item>
        <item>Антистресс</item>
        <item>Анти-аппетит</item>
        <item>Ха-дыхание</item>
        <item>Туммо</item>
        <item>Бахья</item>
        <item>Бхедана</item>
        <item>Капалабхати</item>
        <item>Пратилома</item>
        <item>Ситали</item>
        <item>Квадраное дыхание</item>
        <item>Одноминутное дыхание</item>
    </string-array>
    <string-array name="list_breath_description_array">
        <item>
            Освобождение от суеты в мыслях\n
            Помощь в сосредоточении на текущей деятельности\n
            Воодушевление справляться с ежедневными задачами легче\n
            Способствование поиску ресурса для новаторства в решениях\n
            Стимуляция креативности\n
            Облегчение приступов мигрени\n
        </item>
        <item>
            Ослабление ощущения давления обстоятельств\n
            Облегчение физического напряжения\n
            Снижение уровня стресса\n
            Преключение с рабочего режима\n
            Обеспечение качественного отдыха\n
            Помощь в быстром засыпании\n
        </item>
        <item>
            Быстрое успокоение\n
            Уравновешивание сильных эмоций\n
            Облегчение психического напряжения\n
            Предотвращение приступа панической атаки\n
            Возвращение самоконтроля и способности рационально мыслить\n
        </item>
        <item>
            Мобилизация психических ресурсов\n
            Стимуляция концентрации\n
            Обострение осознаности\n
            Тонизация тела\n
            Борьба с вялостью ума и тела\n
            Повышение физической выносливости\n
        </item>
        <item>
            Снижение уровня стресса\n
            Облегчение физического напряжения\n
            Обострение внимательности\n
            Мобилизация интелектуальных ресурсов\n
            Обновление мыслей\n
            Содействие эффективному логическому мышлению\n
        </item>
        <item>
            Устранение приступа эмоционального (не физического) голода\n
            Укрощение излишнего аппетита\n
            Отвлечение ума от темы еды\n
            Ослабление пищевой зависимости\n
            Стимуляция обмена веществ\n
            Помогает снизить вес здоровым способом\n
        </item>
        <item>
            Очищение легких от дыма и пыли\n
            Расслабление мышечного напряжения\n
            Устранение вялости\n
            Ощущение мира и спокойствия\n
            Эффект омоложения\n
        </item>
        <item>
            Тонизация организма\n
            Освежение мыслей\n
            Приносит ощущение радости и блаженства "здесь и сейчас"\n
            Развитие физической выносливости\n
            Увеличение переносимости низких температур\n
            Улучшение общего состояния здоровья\n
        </item>
        <item>
            Дарит ощущения равновесия\n
            Устранение плохого пищеварения\n
            Облегчение неприятных симптомов диабета\n
            Исцеление репродуктивных органов\n
            Борьба с урологическими проблемами\n
            Повышение качества половых клеток\n
        </item>
        <item>
            Охлаждение тела\n
            Облегчение симптомов простуды\n
            Снижение физического напряжения\n
            Снижение артериального давления\n
            Устранение симптома "жара в груди"\n
        </item>
        <item>
            Улучшение пишеварения\n
            Укрепление печени и почек\n
            Снятие напряжения глаз\n
            Улучшение циркуляции крови\n
            Содействие цветущему виду и красоте лица\n
        </item>
        <item>
            Развитие концентрации и терпения\n
            Увеличение обеспечения кислородом\n
            Укрепление слизистой оболочки носа\n
            Устранение приступов мигрени\n
            Облегчение состояния больных астмой и диабетом\n
        </item>
        <item>
            Снижение температуры тела\n
            Снятие стрессового напряжения\n
            Способствует исцелению заболеваний языка, рта и горла\n
            Устраняет расстройство селезенки\n
            Снижение аппетита и жажды\n
        </item>
        <item>
            Помощь в фокусировке "блуждающего" разума\n
            Развитие осознанности\n
            Облегчает приступы паники\n
            Отлично подходит для новичков\n
        </item>
        <item>
            Тренировка легких для эфективного кислородного обмена\n
            Эфективное снижение тревожности, беспокойства и страха\n
            Ощущение ментального баланса\n
            Радость от ощущения себя в моменте\n
            Развитие интуиции\n
        </item>
    </string-array>
    <string name="text_inhale">ВДОХ</string>
    <string name="text_exhalation">ВЫДОХ</string>
    <string name="text_delay">ЗАДЕРЖКА</string>
    <string-array name="list_meditation_exercise_array">
        <item>Лабиринт</item>
        <item>Огненая сила</item>
        <item>Бездна тишины</item>
        <item>Реалити-шоу</item>
    </string-array>
</resources>