<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.SettingsFragment">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@color/blackblack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@drawable/gradient_black_transp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:background="@drawable/gradient_black_transp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_name_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/black"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="15dp"
                    android:text="@string/settings_text"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginVertical="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_share_settings"
                        style="@style/TextExersiseName"
                        android:layout_marginTop="15dp"
                        android:text="@string/review_text" />

                    <TextView
                        android:id="@+id/text_review_settings"
                        style="@style/TextExersiseName"
                        android:layout_marginTop="15dp"
                        android:text="@string/share_text" />

                    <TextView
                        android:id="@+id/text_send_settings"
                        style="@style/TextExersiseName"
                        android:layout_marginTop="15dp"
                        android:text="@string/send_mail_text" />

                    <TextView
                        android:id="@+id/text_about_settings"
                        style="@style/TextExersiseName"
                        android:layout_marginTop="15dp"
                        android:text="@string/about_text" />

                </LinearLayout>

                <include
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="20dp"
                    layout="@layout/exemple_premium" />


            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>