<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="false"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/purple_800_trans"
        android:orientation="horizontal" >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_conditions_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingVertical="10dp"
            android:layout_marginTop="1dp"
            android:layout_gravity="center"
            android:textColor="@color/grey_light"
            android:text="@string/main_focus_text"
            android:textSize="10sp"
            android:background="@drawable/btn_main_off"
            android:drawableTop="@drawable/ic_focus_off" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_breaths_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:paddingVertical="10dp"
            android:layout_gravity="center"
            android:textColor="@color/grey_light"
            android:text="@string/main_breath_text"
            android:textSize="10sp"
            android:background="@drawable/btn_main_off"
            android:drawableTop="@drawable/ic_breath_off" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_meditations_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:paddingVertical="10dp"
            android:layout_gravity="center"
            android:textColor="@color/grey_light"
            android:text="@string/main_meditation_text"
            android:textSize="10sp"
            android:background="@drawable/btn_main_off"
            android:drawableTop="@drawable/ic_meditation_off" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_settings_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="1dp"
            android:paddingVertical="10dp"
            android:layout_gravity="center"
            android:textColor="@color/grey_light"
            android:text="@string/main_settings_text"
            android:textSize="10sp"
            android:background="@drawable/btn_main_off"
            android:drawableTop="@drawable/ic_settings_off" />

    </LinearLayout>

    </LinearLayout>