<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="false"
    tools:context=".BreathActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@color/blackblack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="@drawable/gradient_black_transp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/controls_bar_breath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentTime_breath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="start"
                android:layout_weight="1"
                android:text="@string/_00_00_00"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/totalTime_breath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_gravity="center"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/_00_00_00"
                android:textColor="@color/white" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar_breath"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:splitTrack="false"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:progressDrawable="@drawable/seekbar_style"
            android:thumb="@drawable/slider_small"/>

    </LinearLayout>

    <com.budiyev.android.circularprogressbar.CircularProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:animateProgress="true"
        app:backgroundStrokeColor="@color/blue_800"
        app:backgroundStrokeWidth="20dp"
        app:drawBackgroundStroke="true"
        app:foregroundStrokeCap="round"
        app:foregroundStrokeColor="@color/grey_dark"
        app:foregroundStrokeWidth="20dp"
        app:indeterminate="false"
        app:indeterminateMinimumAngle="1"
        app:indeterminateRotationAnimationDuration="1200"
        app:indeterminateSweepAnimationDuration="600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:progress="0"
        app:startAngle="-90" />

    <ImageView
        android:id="@+id/slider_breath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@drawable/slider_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/rastish_breath"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:src="@drawable/oval"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_breath_number"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:layout_gravity="center"
            android:text="" />

        <TextView
            android:id="@+id/text_breath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/text_name_exercise_breath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/controls_bar_breath" />

    <Button
        android:id="@+id/button_start_breath"
        style="@style/AppButton"
        android:text="@string/start_text"
        android:layout_margin="40dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_inhale"
            android:textColor="@color/grey_light" />

        <TextView
            android:id="@+id/number_inhale_breath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@color/grey_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_delay"
            android:textColor="@color/grey_light" />

        <TextView
            android:id="@+id/number_delay_1_breath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@color/grey_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_exhalation"
            android:textColor="@color/grey_light" />

        <TextView
            android:id="@+id/number_exhalation_breath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@color/grey_light" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/text_delay"
            android:textColor="@color/grey_light" />

        <TextView
            android:id="@+id/number_delay_2_breath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="0"
            android:textColor="@color/grey_light" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>